# gut_microbiome_project

./: .gitignore  CODE_OF_CONDUCT.md  Contributing.md  README.md  config.yaml  main.py  predict_milk.py  pyproject.toml  train.py
data_preprocessing/: convert_otus_to_parquet.py  dna_from_srs.py  preprocessing_readme.md
data_preprocessing/datasets/: README.md
data_preprocessing/datasets_preprocessing_scripts/diabimmune/preprocessing_scripts/: requirements.yaml
data_preprocessing/mapref_data/conversion_scripts/: convert_otu_to_parquet.py
data_preprocessing/raw_data_processing/goldberg/: T1.csv  T2.csv  T3.csv
data_preprocessing/raw_data_processing/tanaka/preprocessing_scripts/: final_experiment.py  final_trimmed_db.csv  fix099_Supp.csv  fix099_Supp.xlsx  preprocessor.py  preprocessor_2.py  preprocessor_3.py  trimmed_db.csv  trimmed_db.ods  trimmed_db_2.ods
evaluation/: evaluation.py  metrics.py
example_scripts/: CONFIG_GUIDE.md  config.yaml  generate_DNA_embeddings.py  predict_hla.py  predict_milk.py  prepping_code.py  utils.py
modules/: classifier.py  model.py
